# random-forest-v-svm

./: README.md  app.py  phishing_email.ipynb  phishing_email_rf.ipynb  phishing_email_svm.ipynb  pyproject.toml  requirements.txt  test_mail.ipynb
