[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--failed-first"

[tool.ruff]
extend-ignore = [
    "E402"  # Disable imports not on top
    ]
exclude = [
    '.svn',
    'data',
    'CVS',
    '.bzr',
    '.hg',
    '.git',
    '__pycache__',
    '.tox',
    '.idea',
    '.mypy_cache',
    '.venv',
    'node_modules',
    '_state_machine.py',
    'test_fstring.py',
    'bad_coding2.py',
    'badsyntax_*.py',
]

[tool.ruff.flake8-quotes]
inline-quotes = 'single'